add new website from server na

--- a/xem-phim-bo/the-tu-bien-mat-roi/index.html
+++ b/xem-phim-bo/the-tu-bien-mat-roi/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1752,62 +1752,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nui-tuyet-tim-con" title="Núi tuyết tìm con">
+          <a class="list-top-movie-link" href="/phim-moi/giay-thuy-tinh" title="Giày Thủy Tinh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nui-tuyet-tim-con-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giay-thuy-tinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Núi tuyết tìm con
+             Giày Thủy Tinh
             </span>
             <span class="list-top-movie-item-en">
-             The Father Who Moves Mountains
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/o-to-3" title="Ô tô 3">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/o-to-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ô tô 3
-            </span>
-            <span class="list-top-movie-item-en">
-             Cars 3
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vung-dat-bi-ruong-bo" title="Vùng Đất Bị Ruồng Bỏ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-dat-bi-ruong-bo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vùng Đất Bị Ruồng Bỏ
-            </span>
-            <span class="list-top-movie-item-en">
-             The Devil All the Time
+             Glass Slippers
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1818,21 +1774,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hemingway-o-cuba" title="Hemingway ở Cuba">
+          <a class="list-top-movie-link" href="/phim-moi/thu-kiem-tinh-hiep" title="Thư Kiếm Tình Hiệp">
            <span class="status">
             HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hemingway-o-cuba-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-kiem-tinh-hiep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hemingway ở Cuba
+             Thư Kiếm Tình Hiệp
             </span>
             <span class="list-top-movie-item-en">
-             Papa Hemingway In Cuba
+             The Tale Of The Romantic Swordsman
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1840,21 +1796,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/swat-unit-887" title="Swat: Unit 887">
+          <a class="list-top-movie-link" href="/phim-moi/too-beautiful-to-lie" title="Too Beautiful to Lie">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/swat-unit-887-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/too-beautiful-to-lie-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Swat: Unit 887
+             Too Beautiful to Lie
             </span>
             <span class="list-top-movie-item-en">
-             Swat: Unit 887
+             Too Beautiful to Lie
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/con-duong-tam-toi" title="Con Đường Tăm Tối">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-duong-tam-toi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Con Đường Tăm Tối
+            </span>
+            <span class="list-top-movie-item-en">
+             Blackway
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/suc-manh-tren-bien-lich-su-tau-chien" title="Sức mạnh trên biển: Lịch sử tàu chiến">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suc-manh-tren-bien-lich-su-tau-chien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sức mạnh trên biển: Lịch sử tàu chiến
+            </span>
+            <span class="list-top-movie-item-en">
+             Sea Power
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
